added mongoDB as db, cart and orders features

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,15 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+main {
+  padding: 1rem;
+  margin: auto;
+}
+
+form {
+  display: inline;
+}
+
 .centered {
   text-align: center;
 }
@@ -19,16 +28,7 @@ body {
 }
 
 .image img {
-    height: 100%;
-}
-
-main {
-  padding: 1rem;
-  margin: auto;
-}
-
-form {
-  display: inline;
+  height: 100%;
 }
 
 .main-header {
@@ -202,6 +202,17 @@ form {
 .btn:hover,
 .btn:active {
   background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
